@@ -21,13 +21,13 @@ from . import stats
 from . import io
 from . import plots
 from . import models
+from .VERSION import __version__
 
 # Initialization:
 from .driver import init
 # Core reduction modules:
 from . import core
 
-__version__ = f"{ver.PUP_VER}.{ver.PUP_MIN}.{ver.PUP_REV}"
 
 # Clean up top-level namespace--delete everything that isn't in __all__
 # or is a magic attribute, and that isn't a submodule of this package
