@@ -1,8 +1,8 @@
 # Copyright (c) 2018 Patricio Cubillos and contributors.
 # puppies is open-source software under the MIT license (see LICENSE).
 
-from .tools     import *
-from .parse     import *
+from .tools import *
+from .parse import *
 from .paramedit import *
 
 __all__ = tools.__all__ + parse.__all__ + paramedit.__all__
@@ -11,7 +11,7 @@ __all__ = tools.__all__ + parse.__all__ + paramedit.__all__
 # or is a magic attribute, and that isn't a submodule of this package
 for varname in dir():
     if not ((varname.startswith('__') and varname.endswith('__')) or
-            varname in __all__ ):
+            varname in __all__):
         del locals()[varname]
 del(varname)
 
